<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout_width="match_parent"
        android:gravity="start"
        app:iconSpaceReserved="false"
        app:title="@string/notification_header">

        <SwitchPreferenceCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:gravity="fill"
            app:iconSpaceReserved="false"
            app:key="@string/schedule_reminder_key"
            app:summaryOff="@string/notif_summary_off"
            app:summaryOn="@string/notif_summary_on"
            app:title="@string/notif_title" />

    </PreferenceCategory>

</PreferenceScreen>